--- a/css/login.css
+++ b/css/login.css
@@ -11,12 +11,17 @@ body {
 
 #contenido {
     width: 100%;
-    max-width: 400px;
+    max-width: 700px;
 }
 
 .card {
     border-radius: 10px;
     border: none;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background-color: #daeaf6;
+    font-style: normal;
 }
+
+
+
+
